Fixed overflow
Fixed grid overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,7 @@ body {
   left: 10%;
   height:90%;
   top: 5%;
+  display: grid;
 }
 
 #app-root {
@@ -63,12 +64,14 @@ body {
 }
 
 #playlist-selector, #playlist-cards {
-  overflow: scroll;
   grid-column: 1 / 3;
   grid-row: 2 / 3;
-  display:grid;
+  display:flex;
+  flex-direction: column;
+  overflow: scroll;
   background-color: var(--swatch-primary);
 }
+
 
 .playlister-button, .playlister-button-disabled {
   font-size:36pt;
